--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-DB_USER=sa
-DB_PASSWORD=azursys01+
-DB_SERVER=DESKTOP-5LA6O2D
+DB_USER=
+DB_PASSWORD=
+DB_SERVER=
 DB_DATABASE=Gestion-user
 DB_TRUSTED_CONNECTION=true
 DB_ENCRYPT=false
